[gd_scene load_steps=4 format=3 uid="uid://cpw1txbx7b2se"]

[ext_resource type="Theme" uid="uid://wqqukcnho2jr" path="res://assets/matrix_rhombus.tres" id="1_om3dt"]
[ext_resource type="Script" path="res://add_food.gd" id="1_rchei"]
[ext_resource type="Texture2D" uid="uid://ci0wwxkohtcie" path="res://assets/card.png" id="3_i1wrp"]

[node name="addFood" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_om3dt")
script = ExtResource("1_rchei")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 14.0
offset_right = 368.0
offset_bottom = 91.0
text = "Add Food"

[node name="icons" type="ItemList" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 110.0
offset_right = 693.0
offset_bottom = 643.0
icon_scale = 3.0

[node name="foodname" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 114.0
offset_right = 412.0
offset_bottom = 214.0
placeholder_text = "food name"

[node name="units" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 261.0
offset_right = 411.0
offset_bottom = 355.0
placeholder_text = "units"

[node name="calPerUnit" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 503.0
offset_right = 322.0
offset_bottom = 632.0
max_value = 1e+08

[node name="carbPerUnit" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 754.0
offset_right = 459.0
offset_bottom = 839.0
max_value = 100000.0
step = 0.01

[node name="fatPerUnit" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 751.0
offset_right = 238.0
offset_bottom = 836.0
max_value = 100000.0
step = 0.01

[node name="proPerUnit" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 755.0
offset_right = 677.0
offset_bottom = 840.0
max_value = 100000.0
step = 0.01

[node name="save" type="Button" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 17.0
offset_right = 679.0
offset_bottom = 97.0
text = "Save Food"

[node name="calLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 415.0
offset_right = 323.0
offset_bottom = 492.0
text = "Calories"

[node name="macroLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 674.0
offset_right = 689.0
offset_bottom = 751.0
theme_override_font_sizes/font_size = 40
text = "Fat(g)   Carbs(g)   Protein(g)"
horizontal_alignment = 1

[node name="Card" type="Sprite2D" parent="."]
modulate = Color(0.207843, 0, 0.415686, 1)
position = Vector2(168, 943)
scale = Vector2(3.225, 0.857143)
texture = ExtResource("3_i1wrp")

[node name="deleteButton" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 905.0
offset_right = 308.0
offset_bottom = 985.0
theme_override_font_sizes/font_size = 30
text = "Delete existing
 item from list"

[node name="goback" type="Button" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 898.0
offset_right = 603.0
offset_bottom = 976.0
text = "go back"

[connection signal="item_selected" from="icons" to="." method="_on_icons_item_selected"]
[connection signal="text_changed" from="foodname" to="." method="_on_foodname_text_changed"]
[connection signal="text_changed" from="units" to="." method="_on_units_text_changed"]
[connection signal="value_changed" from="calPerUnit" to="." method="_on_cal_per_unit_value_changed"]
[connection signal="value_changed" from="carbPerUnit" to="." method="_on_carb_per_unit_value_changed"]
[connection signal="value_changed" from="fatPerUnit" to="." method="_on_fat_per_unit_value_changed"]
[connection signal="value_changed" from="proPerUnit" to="." method="_on_pro_per_unit_value_changed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="goback" to="." method="_on_goback_pressed"]
